# terminal_commander

./: Cargo.toml  README.md
src/: main.rs
src/components/: file_window.rs  mod.rs
src/components/traits/: component.rs  mod.rs
src/configs/: keys.rs  mod.rs
src/store/: file_window.rs  mod.rs
src/ui/: draw.rs  draw_help.rs  draw_window.rs  mod.rs
