[package]
name = "terminal_commander"
version = "0.2.0"
authors = ["高翔 <263027768@qq.com>"]
edition = "2018"

[dependencies.tui]
version = "0.12"
default-features = false
features = ["crossterm"]

[dependencies.crossterm]
version = "0.18"

[dependencies.dirs]
version = "3.0"

[dependencies.chrono]
version = "0.4"
